force-app/main/default/objects/ContentVersion/fields/Content_Banner_Ads__c.field-meta.xml
<CustomField>
    <fullName>Content_Banner_Ads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Banner Ads</label>
    <referenceTo>Banner_Ads__c</referenceTo>
    <relationshipLabel>Content Banner Ads</relationshipLabel>
    <relationshipName>Content</relationshipName>
    <type>Lookup</type>
</CustomField>