force-app/main/default/objects/ContentVersion/fields/Content_Banner_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Banner_ID__c</fullName>
    <formula>Content_Banner_Ads__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Banner ID</label>
    <type>Text</type>
</CustomField>