force-app/main/default/objects/ContentVersion/fields/Content_Description__c.field-meta.xml
<CustomField>
    <fullName>Content_Description__c</fullName>
    <formula>Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Description</label>
    <type>Text</type>
</CustomField>