force-app/main/default/objects/ContentVersion/fields/Content_ID_Tag__c.field-meta.xml
<CustomField>
    <fullName>Content_ID_Tag__c</fullName>
    <description>Short, fixed string used for identification of Content items</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content ID Tag</label>
    <length>25</length>
    <type>Text</type>
</CustomField>