force-app/main/default/objects/ContentVersion/fields/Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Content_URL__c</fullName>
    <description>Contains an optional URL to Content items</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content URL</label>
    <type>Url</type>
</CustomField>