force-app/main/default/objects/ContentVersion/fields/Document_Owner__c.field-meta.xml
<CustomField>
    <fullName>Document_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Content</relationshipLabel>
    <relationshipName>Content</relationshipName>
    <type>Lookup</type>
</CustomField>