force-app/main/default/objects/ContentVersion/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abstracts</fullName>
            </value>
            <value>
                <fullName>Animations</fullName>
            </value>
            <value>
                <fullName>Application Guides</fullName>
            </value>
            <value>
                <fullName>Articles</fullName>
            </value>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Brochures</fullName>
            </value>
            <value>
                <fullName>Case Layouts</fullName>
            </value>
            <value>
                <fullName>Catalogs</fullName>
            </value>
            <value>
                <fullName>Clinical Presentations</fullName>
            </value>
            <value>
                <fullName>Clinical Summary</fullName>
            </value>
            <value>
                <fullName>Clinical Videos</fullName>
            </value>
            <value>
                <fullName>Competitive Information</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Data Sheets</fullName>
            </value>
            <value>
                <fullName>Discounts &amp; Promos - General</fullName>
            </value>
            <value>
                <fullName>Discounts &amp; Promos - Regenerative</fullName>
            </value>
            <value>
                <fullName>Discounts &amp; Promos - Restorative</fullName>
            </value>
            <value>
                <fullName>Discounts &amp; Promos - Surgical</fullName>
            </value>
            <value>
                <fullName>Education Information</fullName>
            </value>
            <value>
                <fullName>Event Promotions</fullName>
            </value>
            <value>
                <fullName>FAQs</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Fulfillment - DTP Campaign</fullName>
            </value>
            <value>
                <fullName>Fulfillment - PR Material</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>IFUs</fullName>
            </value>
            <value>
                <fullName>Interactive Animations</fullName>
            </value>
            <value>
                <fullName>Manuals</fullName>
            </value>
            <value>
                <fullName>Messaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>