force-app/main/default/objects/ContentVersion/fields/DSA_Force_Sync__c.field-meta.xml
<CustomField>
    <fullName>DSA_Force_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to override selective sync option and force this content to be pulled to user&apos;s devices.</description>
    <label>DSA Force Sync</label>
    <type>Checkbox</type>
</CustomField>