force-app/main/default/objects/ContentVersion/fields/IcertisCLM__ICM_Template_for__c.field-meta.xml
<CustomField>
    <fullName>IcertisCLM__ICM_Template_for__c</fullName>
    <label>Template for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IcertisCLM__ICM_Contract_Types</valueSetName>
    </valueSet>
</CustomField>