force-app/main/default/objects/ContentVersion/fields/iPad_Content_Views__c.field-meta.xml
<CustomField>
    <fullName>iPad_Content_Views__c</fullName>
    <label>iPad Content Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>