force-app/main/default/objects/ContentVersion/fields/Last_Modified_by_user__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_by_user__c</fullName>
    <formula>LastModifiedBy.FirstName + &quot; &quot; +  LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified by User</label>
    <type>Text</type>
</CustomField>