force-app/main/default/objects/ContentVersion/fields/Last_Modified_by_User_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_by_User_Date__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified by User Date</label>
    <type>DateTime</type>
</CustomField>