force-app/main/default/objects/ContentVersion/fields/Last_Modified_on_Server__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_on_Server__c</fullName>
    <description>Identifies the last time that Content items were modified on the server, ignoring modifications made on  iPad Content Views</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Modified on Server</label>
    <type>Date</type>
</CustomField>