force-app/main/default/objects/ContentVersion/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Stem</fullName>
            </value>
            <value>
                <fullName>Cups</fullName>
            </value>
            <value>
                <fullName>Femorals</fullName>
            </value>
            <value>
                <fullName>Tibials</fullName>
            </value>
            <value>
                <fullName>I/M Nails</fullName>
            </value>
            <value>
                <fullName>Compression Hip Screws</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Medical Products</fullName>
            </value>
            <value>
                <fullName>Surgical Products</fullName>
            </value>
            <value>
                <fullName>Liners</fullName>
            </value>
            <value>
                <fullName>Heads</fullName>
            </value>
            <value>
                <fullName>Bipolar</fullName>
            </value>
            <value>
                <fullName>Other Hip Products</fullName>
            </value>
            <value>
                <fullName>Hip Instruments</fullName>
            </value>
            <value>
                <fullName>Articulating Surfaces</fullName>
            </value>
            <value>
                <fullName>Patella</fullName>
            </value>
            <value>
                <fullName>Knee Instruments</fullName>
            </value>
            <value>
                <fullName>Other Knees</fullName>
            </value>
            <value>
                <fullName>Segmental Implants</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Reamers</fullName>
            </value>
            <value>
                <fullName>Bone Substitutions</fullName>
            </value>
            <value>
                <fullName>Cable Products</fullName>
            </value>
            <value>
                <fullName>Plates/Screws</fullName>
            </value>
            <value>
                <fullName>Soft Tissue Attachment</fullName>
            </value>
            <value>
                <fullName>External Fixation</fullName>
            </value>
            <value>
                <fullName>Bone Drills</fullName>
            </value>
            <value>
                <fullName>Pins/Wires</fullName>
            </value>
            <value>
                <fullName>Manual Instruments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>