force-app/main/default/objects/ContentVersion/fields/Publication_Number__c.field-meta.xml
<CustomField>
    <fullName>Publication_Number__c</fullName>
    <description>Publication Number of the content posted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Publication Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>