force-app/main/default/objects/ContentVersion/fields/Sales_Phase__c.field-meta.xml
<CustomField>
    <fullName>Sales_Phase__c</fullName>
    <description>Used to select the sales phase in which each content item will be used by Zimmer reps</description>
    <label>Sales Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepare</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Solve</fullName>
            </value>
            <value>
                <fullName>Deliver</fullName>
            </value>
            <value>
                <fullName>Execute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>