force-app/main/default/objects/ContentVersion/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Thumbnail object</description>
    <label>Thumbnail</label>
    <referenceTo>Thumbnail__c</referenceTo>
    <relationshipLabel>Content</relationshipLabel>
    <relationshipName>Content</relationshipName>
    <type>Lookup</type>
</CustomField>