force-app/main/default/objects/ContentVersion/fields/Thumbnail_ID__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_ID__c</fullName>
    <formula>Thumbnail__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumbnail ID</label>
    <type>Text</type>
</CustomField>