force-app/main/default/objects/ContentVersion/fields/X18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_ID__c</fullName>
    <description>Generates the 18 digit unique key for the record, rather than the 15 digit key shown natively in URL and reports</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit ID</label>
    <type>Text</type>
</CustomField>