force-app/main/default/objects/ContentVersion/fields/ZBDSA__Assign_multi_category__c.field-meta.xml
<CustomField>
    <fullName>ZBDSA__Assign_multi_category__c</fullName>
    <formula>HYPERLINK(&quot;/apex/&quot; + IF(ISBLANK($Setup.ZBDSA__DSA_App_Setting__c.ZBDSA__Package_Name__c), &quot;&quot;, $Setup.ZBDSA__DSA_App_Setting__c.ZBDSA__Package_Name__c + &quot;__&quot;) + &quot;AssignCategories?contentid=&quot;+ Id, &quot;Click Here&quot; , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSA Assign multi category</label>
    <type>Text</type>
</CustomField>