force-app/main/default/objects/ContentVersion/fields/ZBDSA__Available_Offline__c.field-meta.xml
<CustomField>
    <fullName>ZBDSA__Available_Offline__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This content will be available offline.</description>
    <label>DSA Available</label>
    <type>Checkbox</type>
</CustomField>