force-app/main/default/objects/ContentVersion/fields/ZBDSA__Document_Type__c.field-meta.xml
<CustomField>
    <fullName>ZBDSA__Document_Type__c</fullName>
    <label>DSA Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ZBDSA__Internal_Document__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Shareable</fullName>
            </value>
            <value>
                <fullName>Competitive Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>