force-app/main/default/objects/ContentVersion/fields/ZBDSA__Internal_Document__c.field-meta.xml
<CustomField>
    <fullName>ZBDSA__Internal_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to define a document to be Internal only. The document will Only show up in Internal Mode for a Given Configuration.</description>
    <label>DSA Internal Document</label>
    <type>Checkbox</type>
</CustomField>