force-app/main/default/objects/ContentVersion/fields/ZBDSA__IsFeatured__c.field-meta.xml
<CustomField>
    <fullName>ZBDSA__IsFeatured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSA Featured</label>
    <type>Checkbox</type>
</CustomField>